@@ -34,18 +34,18 @@
 
 
     <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
-<!--    <dependency>-->
-<!--      <groupId>org.apache.maven.plugins</groupId>-->
-<!--      <artifactId>maven-clean-plugin</artifactId>-->
-<!--      <version>3.3.2</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-clean-plugin</artifactId>
+      <version>3.3.2</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-<!--    <dependency>-->
-<!--      <groupId>org.apache.maven.plugins</groupId>-->
-<!--      <artifactId>maven-compiler-plugin</artifactId>-->
-<!--      <version>3.10.1</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.10.1</version>
+    </dependency>
 
 
     <dependency>
@@ -79,26 +79,26 @@
     <plugins>
 
 
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-war-plugin</artifactId>-->
-<!--        <version>3.3.2</version>-->
-<!--      </plugin>-->
-
       <plugin>
-        <groupId>org.apache.maven.plugins </groupId>
-        <artifactId>maven-surefire-plugin </artifactId>
-        <version>2.22.2 </version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-          <testFailureIgnore>true</testFailureIgnore>
-          <forkCount>2</forkCount>
-          <reuseForks>true</reuseForks>
-          <argLine>${surefireArgLine}</argLine>
-        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
       </plugin>
+
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins </groupId>-->
+<!--        <artifactId>maven-surefire-plugin </artifactId>-->
+<!--        <version>2.22.2 </version>-->
+<!--        <configuration>-->
+<!--          <argLine>-->
+<!--            &#45;&#45;illegal-access=permit-->
+<!--          </argLine>-->
+<!--          <testFailureIgnore>true</testFailureIgnore>-->
+<!--          <forkCount>2</forkCount>-->
+<!--          <reuseForks>true</reuseForks>-->
+<!--          <argLine>${surefireArgLine}</argLine>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
 
 
       <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
@@ -106,54 +106,54 @@
 
 
 
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.12</version>
-        <executions>
-          <execution>
-            <id>default-prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-              <propertyName>surefireArgLine</propertyName>
-            </configuration>
-          </execution>
-          <execution>
-            <id>default-report</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>default-check</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <rule>
-                  <element>BUNDLE</element>
-                  <limits>
-                    <limit>
-                      <counter>COMPLEXITY</counter>
-                      <value>COVEREDRATIO</value>
-                      <minimum>0.70</minimum>
-                    </limit>
-                  </limits>
-                </rule>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.jacoco</groupId>-->
+<!--        <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--        <version>0.8.12</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>default-prepare-agent</id>-->
+<!--            <goals>-->
+<!--              <goal>prepare-agent</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>-->
+<!--              <propertyName>surefireArgLine</propertyName>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--          <execution>-->
+<!--            <id>default-report</id>-->
+<!--            <phase>test</phase>-->
+<!--            <goals>-->
+<!--              <goal>report</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>-->
+<!--              <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--          <execution>-->
+<!--            <id>default-check</id>-->
+<!--            <goals>-->
+<!--              <goal>check</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <rules>-->
+<!--                <rule>-->
+<!--                  <element>BUNDLE</element>-->
+<!--                  <limits>-->
+<!--                    <limit>-->
+<!--                      <counter>COMPLEXITY</counter>-->
+<!--                      <value>COVEREDRATIO</value>-->
+<!--                      <minimum>0.70</minimum>-->
+<!--                    </limit>-->
+<!--                  </limits>-->
+<!--                </rule>-->
+<!--              </rules>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
 
 
 
